Made changes in index.html

--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="image">
-        <img src="images/image-qr-code.png" alt="ScannerImage" />
-      </div>
+    
+    <main>
+      <div class="container">
+        <div class="image">
+          <img src="images/image-qr-code.png" alt="ScannerImage" />
+        </div>
 
-      <div class="text">
-        <span>Improve you front-end</span>
-        <span>skills by building projects</span>
+        <div class="text">
+          <span>Improve you front-end</span>
+          <span>skills by building projects</span>
 
-        <p>Scan the QR code to visit Frontend</p>
-        <p>Mentor and take your coding skills to</p>
-        <p>the next level</p>
+          <p>Scan the QR code to visit Frontend</p>
+          <p>Mentor and take your coding skills to</p>
+          <p>the next level</p>
+        </div>
       </div>
-    </div>
+    </main>
 
     <!-- <div class="attribution">
       Challenge by
